名簿管理プログラム完成

--- a/report/report.tex
+++ b/report/report.tex
@@ -8,15 +8,71 @@
 \begin{document}
 
 \title{情報工学実験C ネットワークプログラミング}
-\author{山田敬汰}
-\date{\today}
+\author{
+氏名: 山田　敬汰 (Yamada，Keita) \\
+学生番号: 09430559
+}
+\date{提出日: \today \\   
+      締切日: 2021年1月7日 \\}  
 \maketitle
 
-\section{クライアント・サーバ間での通信}
-\section{プログラムの作成方針}
-\section{プログラムの説明}
-\section{プログラムの使用法}
-\section{プログラムの作成過程における考察}
+\section{クライアント・サーバモデルでのデータ通信}
+
+今回の実験では，分散システムの基本的な形式であるクライアントサーバモデルを理解するために，
+TCP/IP ， UDP/IP で通信を行うクライアントサーバモデルのプログラムを作成した．
+
+ここでは，プログラムの基礎の部分にあたる，クライアントとサーバ間での通信が
+どのような手順で行われているかについて詳しく解説する．
+
+まず初めに，クライアントサーバモデルにおける通信の概要について説明する．クライアントサーバモデルでは，クライアント側の計算機のプロセスが，
+サーバ側のプロセスに対してメッセージを送信し，サーバ側が受け取ったメッセージを解釈し，適切な応答を返すことで通信を成立させている．
+ここでいう「メッセージ」とはクライアントとサーバの間で予め決めておいた規約（プロトコル）に沿って構築されたテキストである．
+（例: http プロトコルでは [メソッド名] [エンドポイント] [改行コード]の順に入力する）
+
+次に，クライアントとサーバが通信する際の具体的な手順について時系列順に説明する．
+
+クライアント側での通信手順は以下の通りである．（通信相手のドメイン名は既知とする）
+
+\begin{enumerate}
+      \item DNSサーバに問い合わせを送り，通信相手のドメイン名に対応するIPアドレスの値を取得する．
+      \item 通信相手（サーバ）と情報をやり取りするためのソケット（ファイルディスクリプタ）を作成する．
+      \item 通信相手（サーバ）との接続を確立する．（クライアント側のソケットとサーバ側のソケットとの対応づけを行う）
+      \item プロトコルに沿ったメッセージを構築し，サーバにメッセージを送信する．
+      \item サーバからの応答を待機する．
+      \item サーバから送られてきたメッセージを受信する．
+      \item 通信に使用したソケットを削除する．
+\end{enumerate}
+
+サーバ側での通信手順は以下の通りである．
+
+\begin{enumerate}
+      \item 通信相手（クライアント）と情報をやり取りするためのソケットを作成する．
+      \item ソケットにメタデータを付与する．（どのポートで待ち受けるか，どのIPアドレスと接続するのか等）
+      \item ソケットの監視をOSに要求する．（作成したソケットに対する接続要求が行われることをOSに対して通知する）
+      \item クライアントからの接続要求を受け入れる．
+      \item クライアントから送られてきたメッセージを受信する．
+      \item 受信したメッセージに対して何らかの処理を行う．
+      \item プロトコルに沿ったメッセージを構築し，クライアントにメッセージを送信する．
+\end{enumerate}
+
+\section{名簿管理プログラムの作成方針}
+
+プログラムをおおよそ以下の部分から作成するようにした．以下に，それぞれについての作成方針について述べる．
+
+\begin{enumerate}
+      \item 
+\end{enumerate}
+
+
+
+\section{名簿管理プログラムの説明}
+
+
+
+\section{名簿管理プログラムの使用法}
+
+
+\section{名簿管理プログラムの作成過程における考察}
 \section{得られた結果に関する考察}
 \section{作成したプログラム}
 
