作成過程における考察

--- a/report/report.tex
+++ b/report/report.tex
@@ -229,8 +229,20 @@ Com.  : SEN Unit 2.0 Open
 
 \section{プログラムの作成過程における考察}
 
+ここでは，名簿管理プログラムをサーバクライアントモデルで実装する際に検討した内容，及び考察した内容について述べる．
+
+\subsection{容量の大きいデータの通信}
+
+WコマンドやPコマンドについて，当初の実装では{\tt send}関数で送れるバッファサイズの上限が存在するために，大量のテキストをクライアント側にまとめて送信することが困難であり，Cコマンドで件数を取得したあと，件数分のリクエストを送り，一件ずつ名簿データを取得しクライアント側で結合するという手法を取っていた．つまり，サーバ側はコマンドとともに名簿データの番号を受け取り，該当のデータを一件を返すという実装になっていた．しかし，この実装ではクライアント側の責務が大きくなったり（Pコマンドの取得範囲制御もクライアント側で行う必要がある），通信回数がデータの件数と同じになってしまい通信効率が悪い，という問題点があった．そこで，サーバ側のプログラムにおける{\tt send}関数の部分やクライアント側のプログラムにおける{\tt recv}関数の部分を改良し，通信するデータサイズが大きくなったとしても，バッファサイズで分割して必要最低限の回数で通信できるようにした．また，これらの処理は通信部に隠蔽しているため，コマンド処理側から通信するデータサイズを意識する必要がなくなり，WコマンドやPコマンドの処理をサーバ側に寄せることが可能となった．
+
+\subsection{新規実装コマンドについての考察}
+\subsection{}
 
 \section{得られた結果に関する考察}
+
+\subsection{不足機能に関する考察}
+
+
 
 
 
